# ideas-api

./: README.md  pyproject.toml
ci.cd/: create_s3_zip.sh
documentation/deployment_guide/: README.md  ideas-api-endpoints.yaml  lambda_role_policy.example.json
ideas_api/: job_update_lambda_entry.py  lambda_entry.py  web_service.py
ideas_api/lib/aws_base/: aws_constants.py  aws_cred.py  aws_lambda.py  sns_msg_retriever.py  sqs_msg_transformer.py
ideas_api/lib/external_io/: es_abstract.py  es_factory.py  es_middleware.py  es_middleware_aws.py  file_stream_abstract.py  file_stream_factory.py  file_stream_local.py  file_stream_s3.py  pub_sub_abstract.py  pub_sub_factory.py  pub_sub_sns.py
ideas_api/lib/job_management/: job_constants.py
ideas_api/lib/ogc_processes/: __init__.py  process_schema.py
ideas_api/routes/: routes_api.py
notebook/: IDEAS API.ipynb
notebook/ideas_modules/: ocgapi_client.py
ogc.proposal/: README.md  ogc.job.request.body.json  ogc.job.request.response.json  ogc.job.result.json  ogc.job.status.json  ogc.job.status.sample.json  ogc.job.storage.example.json  ogc.process.list.json  ogc.process.storage.json  ogc.processes.schema.dict.json  sns.request.json  sns.result.json  sns.update.json  validate_incoming_json.py
tests/integration_tests/: test_ogc_processes.py
tf-module/ideas-api/: ideas_api_job_lis_filter_policy.json  ideas_api_job_results_filter_policy.json  lambdas.tf  main.tf  opensearch.tf  outputs.tf  sns.tf  sqs_job_lis.tf  sqs_job_result.tf  terraform.tf.example  terraform.tfvars.example  variables.tf
(+19 files in other folders)
